<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="_">_</string>
	<string name="app_name">Do it later!</string>
	<string name="about_title">Do It Later!</string>
	<string name="about_copyright">
		©2012 Dirk Grappendorf\n
		www.grappendorf.net\n
		github.com/grappendorf/doitlater-android
	</string>
	<string name="about_license">
		Licensed under the\n
		Apache License, Version 2.0\n
		www.apache.org/licenses/LICENSE-2.0\n
	</string>
	<string name="about_thirdparty">
		Third party software:\n\n
		Nuvola Icons - David Vignoni\nwww.icon-king.com/projects/nuvola\nLGPL License V2.1\n\n
		DragSortListView - Carl Bauer\ngithub.com/bauerca/drag-sort-listview\nApache License, Version 2.0\n\n
		NewQuickAction - Lorensius W. L. T\nhttps://github.com/lorensiuswlt/NewQuickAction\nApache License, Version 2.0
	</string>
	<string name="not_implemented_yet">Not implemented yet</string>
	<string name="dummy_task_title">Complete this application</string>
	<string name="dummy_task_description">ASAP</string>
	<string name="completed_on">Completed on %1$s</string>
	<string name="due_on">Due on %1$s</string>
	<string name="open_ended">Open ended</string>
	<string name="unknown_date">-</string>
	<string name="loading">Loading…</string>
	<string name="saving">Saving…</string>
	<string name="name">Name</string>
	<string name="task">Task</string>
	<string name="due_date">Due date</string>
	<string name="due_date_popup">Due date popup</string>
	<string name="notes">Notes</string>
	<string name="description">Description</string>
	<string name="debug_dump">Debug Dump</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="save_error">Error during saving</string>
	<string name="reload">Reload</string>
	<string name="add">Add</string>
	<string name="filter">Filter</string>
	<string name="sort">Sort</string>
	<string name="switch_account">Switch account</string>
	<string name="exit">Exit</string>
	<string name="delete">Delete</string>
	<string name="edit">Edit</string>
	<string name="complete">Complete</string>
	<string name="delete_task">Delete Task</string>
	<string name="delete_task_confirm">Should the task \"%1$s\" really be deleted?</string>
	<string name="delete_task_error">The task couldn\'t be deleted</string>
	<string name="deleting">Deleting…</string>
	<string name="error_input_field_validation">Input field error</string>
	<string name="error_invalud_due_date">Please enter a valid due date</string>
	<string name="title">Title</string>
	<string name="preferences">Preferences</string>
	<string name="api_key">API Key</string>
	<string name="complete_task">Complete Task</string>
	<string name="complete_task_confirm">Should the task \"%1$s\" really be completed?</string>
	<string name="complete_task_error">The task couldn\'t be completed</string>
	<string name="completing">Completing…</string>
	<string name="create">Create</string>
	<string name="creating">Creating…</string>
	<string name="drag">Drag</string>
	<string name="moving">Moving…</string>
	<string name="move_task_error">The task couldn\'t be moved</string>
	<string name="about">About</string>
	<string name="ok">OK</string>
	<string-array name="insert_positions">
		<item>Insert at top of the list</item>
		<item>Append to end of the list</item>
	</string-array>
	<string name="show_completed_tasks">Show completed tasks</string>
	<string name="apply">Apply</string>
	<string name="load_tasklists_error">The task lists couldn\'t be loaded</string>
	<string name="default_">Default</string>
	<string name="task_list_activity_title">Do it later! [%1$s]</string>
</resources>
