<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
	<LinearLayout android:orientation="vertical"
				  android:layout_width="fill_parent" android:layout_height="wrap_content">
		<LinearLayout android:orientation="horizontal"
					  android:layout_width="fill_parent" android:layout_height="wrap_content">
			<CheckBox android:id="@+id/completed" android:layout_width="wrap_content"
					  android:layout_height="wrap_content" android:onClick="onCompletedClicked"/>
			<EditText android:id="@+id/title" android:layout_height="wrap_content"
					  android:layout_width="fill_parent" android:inputType="text"
					  android:text="@string/description"
					  android:hint="@string/title"/>
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
					  android:layout_width="fill_parent" android:layout_height="wrap_content">
			<EditText android:id="@+id/due_date" android:layout_height="wrap_content"
					  android:layout_width="0dp" android:gravity="center_vertical"
					  android:inputType="text" android:text="@string/due_date" android:layout_weight="1"
					  android:hint="@string/due_date"/>
			<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
						 android:src="@drawable/date" android:contentDescription="@string/due_date_popup"
						 android:onClick="onDueDatePopup"/>
		</LinearLayout>
		<EditText android:id="@+id/notes" android:layout_width="fill_parent" android:layout_height="wrap_content"
				  android:inputType="textMultiLine" android:lines="8" android:text="@string/notes"
				  android:gravity="top" android:onClick="onNotesClicked" android:hint="@string/notes"/>
		<LinearLayout android:orientation="horizontal"
					  android:layout_width="fill_parent" android:layout_height="wrap_content">
			<Button android:id="@+id/save" android:text="@string/save" android:drawableLeft="@drawable/ok"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:onClick="onSave"/>
			<Button android:id="@+id/cancel" android:text="@string/cancel" android:drawableLeft="@drawable/cancel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:onClick="onCancel"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
