<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <ImageButton android:id="@+id/reload" android:layout_width="0dp"
                     android:layout_height="wrap_content" android:src="@drawable/reload"
                     android:contentDescription="@string/reload" android:layout_weight="1"
                     android:onClick="onReload"/>
        <ImageButton android:id="@+id/add" android:layout_width="0dp"
                     android:layout_height="wrap_content" android:src="@drawable/add"
                     android:contentDescription="@string/add" android:layout_weight="1"
                     android:onClick="onCreateTask"/>
        <ImageButton android:id="@+id/filter" android:layout_width="0dp"
                     android:layout_height="wrap_content" android:src="@drawable/find"
                     android:contentDescription="@string/filter" android:layout_weight="1"
                     android:onClick="onFilter"/>
        <ImageButton android:id="@+id/sort" android:layout_width="0dp"
                     android:layout_height="wrap_content" android:src="@drawable/alphabet"
                     android:contentDescription="@string/sort" android:layout_weight="1"
                     android:onClick="onSort"/>
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text=""/>
    </LinearLayout>
    <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />
</LinearLayout>
