<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal"
			  android:layout_width="fill_parent" android:layout_height="wrap_content">
	<LinearLayout android:orientation="vertical" android:layout_width="0dp"
				  android:layout_height="wrap_content" android:layout_weight="1"
				  android:paddingTop="1pt" android:paddingBottom="1pt">
		<TextView android:id="@+id/title"
				  android:layout_width="fill_parent" android:layout_height="wrap_content"
				  android:text="@string/dummy_task_title"
				  android:textSize="8pt"/>
		<TextView android:id="@+id/description" android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:text="@string/dummy_task_description"
				  android:textSize="6pt"/>
	</LinearLayout>
	<ImageView
			android:id="@id/drag"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/move_vertically"
			android:contentDescription="@string/drag"
			android:layout_weight="0"
			android:layout_gravity="center"
			android:layout_marginLeft="8pt"
			android:layout_marginRight="2pt"/>
</LinearLayout>
