<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			style="@android:style/Theme.Translucent">
	<LinearLayout android:orientation="vertical"
				  android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Spinner android:id="@+id/taskList" android:layout_width="fill_parent"
				 android:layout_height="wrap_content"/>
		<CheckBox android:id="@+id/show_completed" android:layout_width="wrap_content"
				  android:layout_height="wrap_content" android:text="@string/show_completed_tasks"/>
		<LinearLayout android:orientation="horizontal"
					  android:layout_width="fill_parent" android:layout_height="wrap_content">
			<Button android:id="@+id/apply" android:text="@string/apply" android:drawableLeft="@drawable/ok"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:onClick="onApply"/>
			<Button android:id="@+id/cancel" android:text="@string/cancel" android:drawableLeft="@drawable/cancel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:onClick="onCancel"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
